added calendar and extra comments

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -6,6 +6,6 @@
     <title>UtilsMenu | <%= title %></title>
 </head>
 <body>
-    <h1>welcome to your utility set</h1>
+    <h1>welcome to your calendar</h1>
 </body>
 </html>
