--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -8,6 +8,8 @@
 <body>
     <h1>welcome to your calendar</h1>
 
-    <script src="content/js/calendar.js"></script>
+    <table id="calendar-body" border="1"></table>
+
+    <script defer src="content/js/calendar.js"></script>
 </body>
 </html>
