putting the data from the database in the calendar

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UtilsMenu | <%= title %></title>
+    <style>
+        td{
+            width: 200px;
+            height: 150px;
+        }
+    </style>
 </head>
 <body>
     <h1>welcome to your calendar</h1>
 
     <table id="calendar-body" border="1"></table>
 
-    <script defer src="content/js/calendar.js"></script>
+    <script src="content/js/calendar.js"></script>
 </body>
 </html>
